@@ -229,8 +229,8 @@ clazy runs all checks from level1 by default.
     - [qstring-varargs](docs/checks/README-qstring-varargs.md)
     - [qt-keywords](docs/checks/README-qt-keywords.md)    (fix-qt-keywords)
     - [qt4-qstring-from-array](docs/checks/README-qt4-qstring-from-array.md)    (fix-qt4-qstring-from-array)
+    - [qt6-deprecated-api-fixes](docs/checks/README-qt6-deprecated-api-fixes.md)    (fix-qt6-deprecated-api-fixes)
     - [qt6-header-fixes](docs/checks/README-qt6-header-fixes.md)    (fix-qt6-header-fixes)
-    - [qt6-deprecatedAPI-fixes](docs/checks/README-qt6-deprecatedAPI-fixes.md)    (fix-qt6-deprecatedAPI-fixes)
     - [qt6-qhash-signature](docs/checks/README-qt6-qhash-signature.md)    (fix-qt6-qhash-signature)
     - [qt6-qlatin1stringchar-to-u](docs/checks/README-qt6-qlatin1stringchar-to-u.md)    (fix-qt6-qlatin1stringchar-to-u)
     - [qvariant-template-instantiation](docs/checks/README-qvariant-template-instantiation.md)
